
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* fzz_recv (int) ;
 int printf (char*,char*) ;
 int send (int,char*,int ,int ) ;
 int sprintf (char*,char*,char*) ;
 int * strcmp (char*,char*) ;
 int strlen (char*) ;

int login (int sock, char *user, char *pass)
{
 char buf[1024], *bla;
 bla=fzz_recv(sock);
 printf ("recv: %s\n",bla);
 sprintf (buf,"USER %s\r\n",user);
 send (sock,buf,strlen(buf),0);
 bla=fzz_recv(sock);
 printf ("recv: %s\n",bla);
 sprintf (buf,"PASS %s\r\n",pass);
 send (sock,buf,strlen(buf),0);
 bla=fzz_recv(sock);
 printf ("recv: %s\n",bla);
 if (strcmp("230",bla) != ((void*)0))
  return 0;
 else return -1;
 return 0;
}
